apps-network/cloud/feast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feast
  namespace: frederik-coquelet
spec:
  ports:
    - name: http-feast
      protocol: TCP
      port: 80
      targetPort: 8085
  selector:
    statefulset: test
  type: ClusterIP
