apps-network/cloud/apps-gateway-notebook.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: apps-gateway-cloud-notebook
  namespace: apps-network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "*.kubefrog.ai"
    external-dns.alpha.kubernetes.io/target: "172.22.80.100"
    #external-dns.alpha.kubernetes.io/target: "176.185.193.54"
    external-dns.alpha.kubernetes.io/ttl: "120"
    #external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
        - notebook.kubefrog.ai
        - notebook-llm.kubefrog.ai
      # Upgrade HTTP to HTTPS
      tls:
        httpsRedirect: true
    - port:
        name: https
        number: 443
        protocol: HTTPS
      hosts:
        - notebook.kubefrog.ai
        - notebook-llm.kubefrog.ai
      tls:
        mode: SIMPLE
        credentialName: kubeflow-ingressgateway-certs-kubefrog-ai
