apps-network/cloud/apps-gateway-ollama.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: apps-gateway-ollama-cloud
  namespace: ollama
  annotations:
    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    #external-dns.alpha.kubernetes.io/hostname: '*.kubefrog.ai'
    #external-dns.alpha.kubernetes.io/target: 172.22.80.100
    #external-dns.alpha.kubernetes.io/target: "37.64.116.146"
    
    #external-dns.alpha.kubernetes.io/ttl: "120"
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
        - ollama.kubefrog.ai
      # Upgrade HTTP to HTTPS
      tls:
        httpsRedirect: true
    - port:
        name: https
        number: 443
        protocol: HTTPS
      hosts:
        - ollama.kubefrog.ai
      tls:
        mode: SIMPLE
        credentialName: ollama-gateway-certs-ai
