apps-network/cloud/api-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-cloud
  namespace: apisix
spec:
  hosts:
    - models.kubefrog.ai
  http:
    - route:
        - destination:
            host: apisix-gateway
            port:
              number: 80
  gateways:
    - apps-network/apps-gateway-cloud
