apps-network/cloud/argo-workflow-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo-workflow-cloud
  namespace: kubeflow
spec:
  hosts:
    - argo-workflow.kubefrog.ai
  http:
    - route:
        - destination:
            host: argo-server
            port:
              number: 2746
  gateways:
    - apps-network/apps-gateway-cloud
