apps-network/cloud/n8n-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: n8n
  namespace: n8n
spec:
  hosts:
    - n8n.kubefrog.ai
  http:
    - route:
        - destination:
            host: n8n
            port:
              number: 80
  gateways:
    - apps-network/apps-gateway-cloud
