apps-network/cloud/odoo-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: odoo-cloud
  namespace: odoo
spec:
  hosts:
    - odoo.kubefrog.ai
  http:
    - route:
        - destination:
            host: odoo
            port:
              number: 80
  gateways:
    - apps-network/apps-gateway-cloud
