apps-network/cloud/opik-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: opik
  namespace: opik
spec:
  hosts:
    - opik.kubefrog.ai
  http:
    - route:
        - destination:
            host: opik-frontend
            port:
              number: 5173
  gateways:
    - apps-network/apps-gateway-cloud
